force-app/main/default/objects/Parts_to_Components_Junc__c/Parts_to_Components_Junc__c.object-meta.xml
<CustomObject>
    <label>Parts to Components Junc</label>
    <nameField>
        <displayFormat>P-C{0000000000}</displayFormat>
        <label>Part to Components Junc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts to Components Junc</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>