force-app/main/default/objects/Parts_to_Components_Junc__c/fields/Droid_Components__c.field-meta.xml
<CustomField>
    <fullName>Droid_Components__c</fullName>
    <label>Droid Components</label>
    <referenceTo>Droid_Components__c</referenceTo>
    <relationshipLabel>Parts to Components Junc</relationshipLabel>
    <relationshipName>Parts_to_Components_Junc</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>