force-app/main/default/objects/Parts_to_Components_Junc__c/fields/Droid_Part__c.field-meta.xml
<CustomField>
    <fullName>Droid_Part__c</fullName>
    <label>Droid Part</label>
    <referenceTo>Droid_Parts__c</referenceTo>
    <relationshipLabel>Parts to Components Junc</relationshipLabel>
    <relationshipName>Parts_to_Components_Junc</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>