force-app/main/default/objects/Parts_to_Components_Junc__c/fields/Part_For__c.field-meta.xml
<CustomField>
    <fullName>Part_For__c</fullName>
    <label>Part For</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Component_List</valueSetName>
    </valueSet>
</CustomField>