force-app/main/default/objects/Parts_to_Components_Junc__c/fields/Part_Price__c.field-meta.xml
<CustomField>
    <fullName>Part_Price__c</fullName>
    <formula>Droid_Part__r.Part_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>